--- a/templates/plugins/simple_form/simple_form.html.twig
+++ b/templates/plugins/simple_form/simple_form.html.twig
@@ -1,5 +1,5 @@
 {% if fields | length > 1 %}
-  <form name="simple_form" id="simple_form" novalidate action="https://getsimpleform.com/messages?form_api_token={{ token }}" enctype="multipart/form-data" method="post">
+  <form name="simple_form" id="simple_form" action="https://getsimpleform.com/messages?form_api_token={{ token }}" enctype="multipart/form-data" method="post">
 
     {% for key, field in fields %}
       <div id="simple_form-{{ key }}">
@@ -7,10 +7,12 @@
           <label for="simple_form-field-{{ key }}">{{ field.title }}</label>
         {% endif %}
 
-        {% if field.type in ['text', 'email', 'tel', 'hidden'] %}
-          <input type="{{ field.type }}" id="simple_form-field-{{ key }}" name="{{ key }}" class="{{ field.class }}" placeholder="{{ field.placeholder }}" value="{{ field.default }}" />
+        {% if field.type in ['text', 'email', 'tel', 'hidden', 'url', 'date'] %}
+          <input type="{{ field.type }}" id="simple_form-field-{{ key }}" name="{{ key }}" class="{{ field.class }}" placeholder="{{ field.placeholder }}" value="{{ field.default }}" {% if field.required %}required="required"{% endif %} />
+        {% elseif field.type in ['number', 'range'] %}
+          <input type="{{ field.type }}" id="simple_form-field-{{ key }}" name="{{ key }}" class="{{ field.class }}" placeholder="{{ field.placeholder }}" value="{{ field.default }}" {% if field.required %}required="required"{% endif %} {% if field.min | length >= 0 %}min="{{ field.min }}"{% endif %} {% if field.max | length >= 0 %}max="{{ field.max }}"{% endif %} />
         {% elseif field.type == 'textarea' %}
-          <textarea id="simple_form-field-{{ key }}" name="{{ key }}" class="{{ field.class }}" placeholder="{{ field.placeholder }}">{{ field.default }}</textarea>
+          <textarea id="simple_form-field-{{ key }}" name="{{ key }}" class="{{ field.class }}" placeholder="{{ field.placeholder }}" {% if field.required %}required="required"{% endif %}>{{ field.default }}</textarea>
         {% elseif field.type == 'submit' %}
           <button id="simple_form-field-{{ key }}" name="{{ key }}" class="{{ field.class }}">{{ field.title }}</button>
         {% endif %}
