--- a/templates/plugins/simple_form/simple_form.html.twig
+++ b/templates/plugins/simple_form/simple_form.html.twig
@@ -15,6 +15,16 @@
                     <textarea id="simple_form-field-{{ key }}" name="{{ key }}" class="{{ field.class }}" placeholder="{{ field.placeholder }}" {% if field.required %}required="required"{% endif %}>{{ field.default }}</textarea>
                 {% elseif field.type == 'submit' %}
                     <button id="simple_form-field-{{ key }}" name="{{ key }}" class="{{ field.class }}">{{ field.title }}</button>
+                {% elseif field.type in ['select'] %}
+                    <select id="simple_form-field-{{ key }}" name="{{ key }}" class="{{ field.class }}">
+                        {% if field.default %}
+                            <option>{{ field.default }}</option>
+                        {% endif %}
+
+                        {% for option in field.options %}
+                            <option value="{{ option }}">{{ option }}</option>
+                        {% endfor %}
+                    </select>
                 {% else %}
                     <input type="text" id="simple_form-field-{{ key }}" name="{{ key }}" class="{{ field.class }}" placeholder="{{ field.placeholder }}" value="{{ field.default }}" {% if field.required %}required="required"{% endif %} />
                 {% endif %}
